--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+# expand scroll history from default to something much larger
 set -g history-limit 10000
+
+# disallow autorenaming of windows
 set -g allow-rename off
+
+# allow mouse scrolling (copy is weird though)
 set -g mouse on
